--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </div>
         <hr>
         <div class="jumbotron">
-            <img src="assets/gamedev.jpg"  class="img-polaroid" style="width:300px; height:300px">
+            <img src="assets/logo.jpg"  class="img-polaroid img-responsive" >
           </div>
 
 
@@ -31,6 +31,9 @@
             <div class="span6">
                 <h4>2019</h4>
                 <p>We started out for the first game jam we ever participated in which was Game Off 2019 as it was something we wanted to do from our day job for us to continue refining our programming skills and learning new technologies.</p>
+                <p>
+                    <img src="assets/gamedev.jpg"  class="img-polaroid" style="width:300px; height:300px"
+                </p>
             </div>
             <div class="span6">
                 <h4 class="orange">About Us</h4>
@@ -50,15 +53,15 @@
         <div class="row-fluid">
             <ul class="thumbnails example-sites">
                 <li class="span3">
-                    <a class="thumbnail" href="http://jason.sperske.com/wad/" target="_blank">
-                        <img src="https://img.itch.zone/aW1nLzI3MzQzOTQucG5n/315x250%23c/A1Menu.png" alt="WADParser.py">
+                    <a class="thumbnail" href="https://github.com/djknitex" target="_blank">
+                        <img src="assets/unnamed.png" alt="DJKNITEX">
                     </a>
-                    <h4 class="red">Nikki "DJKNITEX" X</h4>
+                    <a href="https://nikkix.me"><h4 class="red">Nikki "DJKNITEX" X</h4></a>
                     <h5>Founder / Programmer / Scrum Master</h5>
                 </li>
                 <li class="span3">
-                    <a class="thumbnail" href="http://kippt.com/" target="_blank">
-                        <img src="https://img.itch.zone/aW1nLzQ3MDQ3OTgucG5n/315x250%23c/S5nuEc.png" alt="Kippt">
+                    <a class="thumbnail" href="" target="_blank">
+                        <img src="assets/unnamed.png" alt="Quintin">
                     </a>
                     <h4> Quintin "" L </h4>
                     <h5>Audio Engineer</h5>
@@ -70,37 +73,33 @@
         <div class="row-fluid">
             <ul class="thumbnails example-sites">
                 <li class="span3">
-                    <a class="thumbnail" href="http://jason.sperske.com/wad/" target="_blank">
-                        <img src="assets/gameoff.png" alt="WADParser.py">
+                    <a class="thumbnail" href="" target="_blank">
+                        <img src="assets/unnamed2.png" alt="Sawada14">
                     </a>
                     <h4>Matthew "Sawada14" S</h4>
                     <h5>Programmer (Game Off 2019-2021)</h5>
                 </li>
                 <li class="span3">
-                    <a class="thumbnail" href="http://kippt.com/" target="_blank">
-                        <img src="assets/nanoreno.jpg" alt="Kippt">
+                    <a class="thumbnail" href="https://github.com/meimeiys" target="_blank">
+                        <img src="assets/unnamed2.png" alt="MeiYS">
                     </a>
-                    <h4>Mei "MeiYS" S</h4>
+                    <a href="https://meiys.me"><h4>Mei "MeiYS" S</h4></a>
                     <h5>Graphic Artist (Game Off 2019-2020)</h5>
                 </li>
             </ul>
         </div>
         <hr>
         <h1>Other Collaborators</h1>
-        <!-- <div class="row-fluid">
+        <div class="row-fluid">
             <ul class="thumbnails example-sites">
                 <li class="span3">
-                    <a class="thumbnail" href="http://jason.sperske.com/wad/" target="_blank">
-                        <img src="assets/gameoff.png" alt="WADParser.py">
-                    </a>
+                    <h3>Mendoxee</h3>
                 </li>
                 <li class="span3">
-                    <a class="thumbnail" href="http://kippt.com/" target="_blank">
-                        <img src="assets/nanoreno.jpg" alt="Kippt">
-                    </a>
+                    <a href="https://jennamiles.art/"><h3>Jenna</h3></a>
                 </li>
             </ul>
-        </div> -->
+        </div>
         <hr class="soften">
         <div class="footer">
             <p>&copy; <a href="https://teamskynite.net">TEAM SKYNITE</p>
