console log feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="bootstrap-responsive.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>mockinbird.dev - Game Dev from NWA</title>
+    <script>
+      function joinUs() {
+        console.log("Click on our Discord Link yo!")
+      }
+    </script>
 </head>
 <body>
     <div class="container-narrow">
@@ -27,7 +32,7 @@
         <div class="jumbotron">
           <h1>Game Dev from the heart of NWA.</h1>
           <p class="lead">We are a small team who work with a million different people across many different projects ranging from long-term games to game-jam submissions.</p>
-          <a class="btn btn-large btn-success" href="#">Join us for our next project!</a>
+          <a class="btn btn-large btn-success" href="#" onclick="joinUs()">Join us for our next project!</a>
         </div>
   
         <hr>
