added new game and updated pics

--- a/index.html
+++ b/index.html
@@ -61,22 +61,28 @@
         <div class="row-fluid">
             <ul class="thumbnails example-sites">
               <li class="span3">
-                <a class="thumbnail" href="http://jason.sperske.com/wad/" target="_blank">
+                <a class="thumbnail" href="https://djknitex.itch.io/homeward-bound" target="_blank">
                   <img src="https://img.itch.zone/aW1nLzI3MzQzOTQucG5n/315x250%23c/A1Menu.png" alt="WADParser.py">
                 </a>
                 <h4>Homeward Bound - Game Off 2019</h4>
               </li>
               <li class="span3">
-                <a class="thumbnail" href="http://kippt.com/" target="_blank">
+                <a class="thumbnail" href="https://djknitex.itch.io/moonward-bound-tech-demo" target="_blank">
                   <img src="https://img.itch.zone/aW1nLzQ3MDQ3OTgucG5n/315x250%23c/S5nuEc.png" alt="Kippt">
                 </a>
                 <h4>Moonward Bound - Game Off 2020 </h4>
               </li>
               <li class="span3">
-                <a class="thumbnail" href="http://www.gathercontent.com/" target="_blank">
+                <a class="thumbnail" href="https://djknitex.itch.io/moonward-bound-tech-demo target="_blank">
                   <img src="https://img.itch.zone/aW1nLzc1MDc3NDYucG5n/315x250%23c/I32%2B5f.png" alt="Gather Content">
                 </a>
                 <h4>Look Out! - Game Off 2021</h4>
+              </li>
+              <li class="span3">
+                <a class="thumbnail" href="https://djknitex.itch.io/echoes-that-sing" target="_blank">
+                  <img src="https://img.itch.zone/aW1nLzg1NDkxMzguanBn/315x250%23c/LDBBzm.jpg" alt="Gather Content">
+                </a>
+                <h4>Echoes that Sing - NaNoRenO 2022 </h4>
               </li>
             </ul>
            </div>
@@ -85,12 +91,12 @@
         <div class="row-fluid">
             <ul class="thumbnails example-sites">
               <li class="span3">
-                <a class="thumbnail" href="http://jason.sperske.com/wad/" target="_blank">
+                <a class="thumbnail" href="#" target="_blank">
                   <img src="assets/gameoff.png" alt="WADParser.py">
                 </a>
               </li>
               <li class="span3">
-                <a class="thumbnail" href="http://kippt.com/" target="_blank">
+                <a class="thumbnail" href="#" target="_blank">
                   <img src="assets/nanoreno.jpg" alt="Kippt">
                 </a>
               </li>
