fix blog link and added Gralina

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <h4>2019</h4>
                 <p>We started out for the first game jam we ever participated in which was Game Off 2019 as it was something we wanted to do from our day job for us to continue refining our programming skills and learning new technologies.</p>
                 <p>
-                    <img src="assets/gamedev.jpg"  class="img-polaroid" style="width:300px; height:300px"
+                    <img src="assets/gamedev.jpg"  class="img-polaroid" style="width:300px; height:300px" >
                 </p>
             </div>
             <div class="span6">
