--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul class="nav nav-pills pull-right">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="https://blog.teamskynite.net/">Blog</a></li>
+            <li><a href="https://blog.nikkix.me">Blog</a></li>
             <li><a href="https://discord.gg/6tqvP6mEgR">Discord</a></li>
           </ul>
           <h3 class="muted">mockinbird.dev</h3>
