--- a/gralina.html
+++ b/gralina.html
@@ -34,7 +34,8 @@
                 </p>
             </div>
             <div class="span6">
-                <h4 class="orange">Gralina - 2D ORPG</h4>
+                <h3 class="orange">Gralina - 2D ORPG</h3>
+                <h4>Powered by the Intersect Game Engine</h4>
                 <p>
                     Originally planned as an RPG Maker MV sequel to one of my (Nikki's) project I did for class, Cartuga. The original source files for the game were lost because I forgot to 
                     make a backup before I did a reformat so the project died in 2019. The game was originally supposed to be another single player quick RPG with the last entry being the online one. But we decided
