adding blog link directly to label: gralina

--- a/gralina.html
+++ b/gralina.html
@@ -48,7 +48,7 @@
                 <p>
                     Open Beta coming soon to a computer a near you.
                 </p>
-                <a class="btn btn-primary" href="https://blog.nikkix.me" target=_blank>Check out the DEV Log here</a>            </div>
+                <a class="btn btn-primary" href="https://blog.nikkix.me/search/label/Gralina" target=_blank>Check out the DEV Log here</a>            </div>
 
            </div>
         <hr class="soften">
