--- a/about.html
+++ b/about.html
@@ -23,25 +23,32 @@
         </div>
         <hr>
         <div class="jumbotron">
-            <img src="assets/logo.jpg"  class="img-polaroid img-responsive" >
-          </div>
+            <img src="assets/logo.jpg" class="img-polaroid img-responsive">
+        </div>
 
 
         <div class="row-fluid marketing">
             <div class="span6">
                 <h4>2019</h4>
-                <p>We started out for the first game jam we ever participated in which was Game Off 2019 as it was something we wanted to do from our day job for us to continue refining our programming skills and learning new technologies.</p>
+                <p>We started out for the first game jam we ever participated in which was Game Off 2019 as it was
+                    something we wanted to do from our day job for us to continue refining our programming skills and
+                    learning new technologies.</p>
                 <p>
-                    <img src="assets/gamedev.jpg"  class="img-polaroid" style="width:300px; height:300px" >
+                    <img src="assets/gamedev.jpg" class="img-polaroid" style="width:300px; height:300px">
                 </p>
             </div>
             <div class="span6">
                 <h4 class="orange">About Us</h4>
                 <p>
-                    We are a group of like-minded folks who just wants to build things together. No matter where we were located we always met remotely and have done many different projects. Our goal is to use our free time to make cool things using technologies we normally wouldn't use. (Assembly, Lua, etc).
+                    We are a group of like-minded folks who just wants to build things together. No matter where we were
+                    located we always met remotely and have done many different projects. Our goal is to use our free
+                    time to make cool things using technologies we normally wouldn't use. (Assembly, Lua, etc).
                 </p>
                 <p>
-                    We started in 2019 just outside of Los Angeles with most of the core team back at home in NWA. We will have a team based out of Japan as well in the near future. We work with folks from all over. So let's keep doing it. Our goal isn't to become accomplished game developers, we just want to build something that we all enjoy doing.
+                    We started in 2019 just outside of Los Angeles with most of the core team back at home in NWA. We
+                    will have a team based out of Japan as well in the near future. We work with folks from all over. So
+                    let's keep doing it. Our goal isn't to become accomplished game developers, we just want to build
+                    something that we all enjoy doing.
                 </p>
 
 
@@ -56,7 +63,9 @@
                     <a class="thumbnail" href="https://github.com/djknitex" target="_blank">
                         <img src="assets/unnamed.png" alt="DJKNITEX">
                     </a>
-                    <a href="https://nikkix.me"><h4 class="red">Nikki "DJKNITEX" X</h4></a>
+                    <a href="https://nikkix.me">
+                        <h4 class="red">Nikki "DJKNITEX" X</h4>
+                    </a>
                     <h5>Founder / Programmer / Scrum Master</h5>
                 </li>
                 <li class="span3">
@@ -83,7 +92,9 @@
                     <a class="thumbnail" href="https://github.com/meimeiys" target="_blank">
                         <img src="assets/unnamed2.png" alt="MeiYS">
                     </a>
-                    <a href="https://meiys.me"><h4>Mei "MeiYS" S</h4></a>
+                    <a href="https://meiys.me">
+                        <h4>Mei "MeiYS" S</h4>
+                    </a>
                     <h5>Graphic Artist (Game Off 2019-2020)</h5>
                 </li>
             </ul>
@@ -96,13 +107,15 @@
                     <h3>Mendoxee</h3>
                 </li>
                 <li class="span3">
-                    <a href="https://jennamiles.art/"><h3>Jenna</h3></a>
+                    <a href="https://jennamiles.art/">
+                        <h3>Jenna</h3>
+                    </a>
                 </li>
             </ul>
         </div>
         <hr class="soften">
         <div class="footer">
-            <p>&copy; <a href="https://teamskynite.net">TEAM SKYNITE</p>
+            <p>&copy; <a href="https://mockinbird.dev">mockinbird.dev</p>
         </div>
     </div>
 </body>
