--- a/gralina.html
+++ b/gralina.html
@@ -40,42 +40,52 @@
                 <h3 class="orange">Gralina - 2D ORPG</h3>
                 <h4>Powered by the Intersect Game Engine</h4>
                 <p>
-                    Originally planned as an RPG Maker MV sequel to one of my (Nikki's) project I did for class, Cartuga. The original source files for the game were lost because I forgot to 
-                    make a backup before I did a reformat so the project died in 2019. The game was originally supposed to be another single player quick RPG with the last entry being the online one. But we decided
-                    to make this one online. Inspired by classics such as Deloria Online, Ragnarok Online, and Runescape (Among many more).
+                    Originally planned as an RPG Maker MV sequel to one of my (Nikki's) project I did for class,
+                    Cartuga. The original source files for the game were lost because I forgot to
+                    make a backup before I did a reformat so the project died in 2019. The game was originally supposed
+                    to be another single player quick RPG with the last entry being the online one. But we decided
+                    to make this one online. Inspired by classics such as Deloria Online, Ragnarok Online, and Runescape
+                    (Among many more).
                 </p>
                 <p>
-                    Journey alone or with a group of adventurers in this exciting free-to-play retro-style Online Role-Playing Game. 
-                    You will travel through different biomes, from the lush forests of the greenbelt to the arid deserts of the wastelands. You will meet new people and learn about their cultures. And you will discover the secrets of the ancient world, which will help you in your quest to stop the evil from rising.
+                    Journey alone or with a group of adventurers in this exciting free-to-play retro-style Online
+                    Role-Playing Game.
+                    You will travel through different biomes, from the lush forests of the greenbelt to the arid deserts
+                    of the wastelands. You will meet new people and learn about their cultures. And you will discover
+                    the secrets of the ancient world, which will help you in your quest to stop the evil from rising.
                 </p>
                 <p>
                     Open Beta coming soon to a computer a near you.
                 </p>
-                <a class="btn btn-primary" href="https://blog.nikkix.me/search/label/Gralina" target=_blank>Check out the DEV Log here</a>            </div>
+                <a class="btn btn-primary" href="https://blog.nikkix.me/search/label/Gralina" target=_blank>Check out
+                    the DEV Log here</a>
+            </div>
 
-           </div>
-           <hr />
-           <h1>Current Team</h1>
-           <div class="row-fluid">
-               <ul class="thumbnails example-sites">
-                   <li class="span3">
-                       <a class="thumbnail" href="https://github.com/djknitex" target="_blank">
-                           <img src="assets/unnamed.png" alt="DJKNITEX">
-                       </a>
-                       <a href="https://nikkix.me"><h4 class="red">Nikki "DJKNITEX" X</h4></a>
-                       <h5>Main Developer</h5>
-                   </li>
-                   <li class="span3">
-                       <a class="thumbnail" href="" target="_blank">
-                           <img src="assets/unnamed.png" alt="Quintin">
-                       </a>
-                       <h4> JeeJuz </h4>
-                       <h5>GFX Artist / QA</h5>
-                   </li>
-               </ul>
-           </div>>
+        </div>
+        <hr />
+        <h1>Current Team</h1>
+        <div class="row-fluid">
+            <ul class="thumbnails example-sites">
+                <li class="span3">
+                    <a class="thumbnail" href="https://github.com/djknitex" target="_blank">
+                        <img src="assets/unnamed.png" alt="DJKNITEX">
+                    </a>
+                    <a href="https://nikkix.me">
+                        <h4 class="red">Nikki "DJKNITEX" X</h4>
+                    </a>
+                    <h5>Main Developer</h5>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail" href="" target="_blank">
+                        <img src="assets/unnamed.png" alt="Quintin">
+                    </a>
+                    <h4> JeeJuz </h4>
+                    <h5>GFX Artist / QA</h5>
+                </li>
+            </ul>
+        </div>>
         <div class="footer">
-            <p>&copy; <a href="https://teamskynite.net">TEAM SKYNITE</p>
+            <p>&copy; <a href="https://mockinbird.dev">mockinbird.dev</p>
         </div>
     </div>
 </body>
