--- a/index.html
+++ b/index.html
@@ -1,113 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="bootstrap.css" rel="stylesheet">
-    <link href="bootstrap-responsive.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <title>mockinbird.dev - Game Dev from NWA</title>
-    <script>
-      function joinUs() {
-        console.log("Click on our Discord Link yo!")
-      }
-    </script>
-</head>
-<body>
-    <div class="container-narrow">
 
-        <div class="masthead">
-          <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="https://blog.nikkix.me">Blog</a></li>
-            <li><a href="https://discord.gg/6tqvP6mEgR">Discord</a></li>
-          </ul>
-          <h3 class="muted">mockinbird.dev</h3>
-        </div>
-  
-        <hr>
-  
-        <div class="jumbotron">
-          <h1>Game Dev from the heart of NWA.</h1>
-          <p class="lead">We are a small team who work with a million different people across many different projects ranging from long-term games to game-jam submissions.</p>
-          <a class="btn btn-large btn-success" href="#" onclick="joinUs()">Join us for our next project!</a>
-        </div>
-  
-        <hr>
-  
-        <div class="row-fluid marketing">
-          <div class="span6">
-            <h4>Vintage</h4>
-            <p>Our love for old retro and 8-bit games was the reason why we started this project. We are building retro style games as well games for actual retro consoles.</p>
-  
-            <h4 class="orange">Knowledge</h4>
-            <p>We participate in many diffrent game jams always doing something diffrent. We like to work with many different languages and frameworks as a learning experience.</p>
-  
-          </div>
-  
-          <div class="span6">
-            <h4 class="red">Collaboration</h4>
-            <p>We like to collab with many different people ranging from musicians to artists and even storywriters. We work together to create something fun and amazing.</p>
-  
-            <h4 class="purple">Creative Circle</h4>
-            <p>We are just a group of folks with day time jobs &amp; similar interests who love to work on something creative on the side. Come join and work on something retro and cool. </p>
-  
-          </div>
-        </div>
-        <hr class="soften">
-        <h1>Portfolio</h1>
-        <div class="row-fluid">
-            <ul class="thumbnails example-sites">
-              <li class="span3">
-                <a class="thumbnail" href="https://djknitex.itch.io/homeward-bound" target="_blank">
-                  <img src="https://img.itch.zone/aW1nLzI3MzQzOTQucG5n/315x250%23c/A1Menu.png" alt="WADParser.py">
-                </a>
-                <h4>Homeward Bound - Game Off 2019</h4>
-              </li>
-              <li class="span3">
-                <a class="thumbnail" href="https://djknitex.itch.io/moonward-bound-tech-demo" target="_blank">
-                  <img src="https://img.itch.zone/aW1nLzQ3MDQ3OTgucG5n/315x250%23c/S5nuEc.png" alt="Kippt">
-                </a>
-                <h4>Moonward Bound - Game Off 2020 </h4>
-              </li>
-              <li class="span3">
-                <a class="thumbnail" href="https://djknitex.itch.io/moonward-bound-tech-demo target="_blank">
-                  <img src="https://img.itch.zone/aW1nLzc1MDc3NDYucG5n/315x250%23c/I32%2B5f.png" alt="Gather Content">
-                </a>
-                <h4>Look Out! - Game Off 2021</h4>
-              </li>
-              <li class="span3">
-                <a class="thumbnail" href="https://djknitex.itch.io/echoes-that-sing" target="_blank">
-                  <img src="https://img.itch.zone/aW1nLzg1NDkxMzguanBn/315x250%23c/LDBBzm.jpg" alt="Gather Content">
-                </a>
-                <h4>Echoes that Sing - NaNoRenO 2022 </h4>
-              </li>
-            </ul>
-           </div>
-        <hr class="soften">
-        <h1>Game Jams we like to enter</h1>
-        <div class="row-fluid">
-            <ul class="thumbnails example-sites">
-              <li class="span3">
-                <a class="thumbnail" href="#" target="_blank">
-                  <img src="assets/gameoff.png" alt="WADParser.py">
-                </a>
-              </li>
-              <li class="span3">
-                <a class="thumbnail" href="#" target="_blank">
-                  <img src="assets/nanoreno.jpg" alt="Kippt">
-                </a>
-              </li>
-            </ul>
-           </div>
-        <hr class="soften">
-        <div class="footer">
-          <p>&copy; <a href="https://teamskynite.net">TEAM SKYNITE</p>
-        </div>
-  
-      </div> <!-- /container -->
-    
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="bootstrap.css" rel="stylesheet">
+  <link href="bootstrap-responsive.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <title>mockinbird.dev - Game Dev from NWA</title>
+  <script>
+    function joinUs() {
+      console.log("Click on our Discord Link yo!")
+    }
+  </script>
+</head>
+
+<body>
+  <div class="container-narrow">
+
+    <div class="masthead">
+      <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="https://blog.nikkix.me">Blog</a></li>
+        <li><a href="https://discord.gg/6tqvP6mEgR">Discord</a></li>
+      </ul>
+      <h3 class="muted">mockinbird.dev</h3>
+    </div>
+
+    <hr>
+
+    <div class="jumbotron">
+      <h1>Game Dev from the heart of NWA.</h1>
+      <p class="lead">We are a small team who work with a million different people across many different projects
+        ranging from long-term games to game-jam submissions.</p>
+      <a class="btn btn-large btn-success" href="#" onclick="joinUs()">Join us for our next project!</a>
+    </div>
+
+    <hr>
+
+    <div class="row-fluid marketing">
+      <div class="span6">
+        <h4>Vintage</h4>
+        <p>Our love for old retro and 8-bit games was the reason why we started this project. We are building retro
+          style games as well games for actual retro consoles.</p>
+
+        <h4 class="orange">Knowledge</h4>
+        <p>We participate in many diffrent game jams always doing something diffrent. We like to work with many
+          different languages and frameworks as a learning experience.</p>
+
+      </div>
+
+      <div class="span6">
+        <h4 class="red">Collaboration</h4>
+        <p>We like to collab with many different people ranging from musicians to artists and even storywriters. We work
+          together to create something fun and amazing.</p>
+
+        <h4 class="purple">Creative Circle</h4>
+        <p>We are just a group of folks with day time jobs &amp; similar interests who love to work on something
+          creative on the side. Come join and work on something retro and cool. </p>
+
+      </div>
+    </div>
+    <hr class="soften">
+    <h1>Portfolio</h1>
+    <div class="row-fluid">
+      <ul class="thumbnails example-sites">
+        <li class="span3">
+          <a class="thumbnail" href="https://djknitex.itch.io/homeward-bound" target="_blank">
+            <img src="https://img.itch.zone/aW1nLzI3MzQzOTQucG5n/315x250%23c/A1Menu.png" alt="WADParser.py">
+          </a>
+          <h4>Homeward Bound - Game Off 2019</h4>
+        </li>
+        <li class="span3">
+          <a class="thumbnail" href="https://djknitex.itch.io/moonward-bound-tech-demo" target="_blank">
+            <img src="https://img.itch.zone/aW1nLzQ3MDQ3OTgucG5n/315x250%23c/S5nuEc.png" alt="Kippt">
+          </a>
+          <h4>Moonward Bound - Game Off 2020 </h4>
+        </li>
+        <li class="span3">
+          <a class="thumbnail" href="https://djknitex.itch.io/moonward-bound-tech-demo target=" _blank">
+            <img src="https://img.itch.zone/aW1nLzc1MDc3NDYucG5n/315x250%23c/I32%2B5f.png" alt="Gather Content">
+          </a>
+          <h4>Look Out! - Game Off 2021</h4>
+        </li>
+        <li class="span3">
+          <a class="thumbnail" href="https://djknitex.itch.io/echoes-that-sing" target="_blank">
+            <img src="https://img.itch.zone/aW1nLzg1NDkxMzguanBn/315x250%23c/LDBBzm.jpg" alt="Gather Content">
+          </a>
+          <h4>Echoes that Sing - NaNoRenO 2022 </h4>
+        </li>
+      </ul>
+    </div>
+    <hr class="soften">
+    <h1>Game Jams we like to enter</h1>
+    <div class="row-fluid">
+      <ul class="thumbnails example-sites">
+        <li class="span3">
+          <a class="thumbnail" href="#" target="_blank">
+            <img src="assets/gameoff.png" alt="WADParser.py">
+          </a>
+        </li>
+        <li class="span3">
+          <a class="thumbnail" href="#" target="_blank">
+            <img src="assets/nanoreno.jpg" alt="Kippt">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <hr class="soften">
+    <div class="footer">
+      <p>&copy; <a href="https://mockinbird.dev">mockinbird.dev</p>
+    </div>
+
+  </div> <!-- /container -->
+
 </body>
+
 </html>
