--- a/gralina.html
+++ b/gralina.html
@@ -83,7 +83,7 @@
                     <h5>GFX Artist / QA</h5>
                 </li>
             </ul>
-        </div>>
+        </div>
         <div class="footer">
             <p>&copy; <a href="https://mockinbird.dev">mockinbird.dev</p>
         </div>
