--- a/hollowgrounds.html
+++ b/hollowgrounds.html
@@ -27,7 +27,7 @@
         <div class="row-fluid marketing">
             <div class="span6">
                 <p>
-                    <img src="assets/gralinabg.png" class="img-polaroid img-responsive" />
+                    <img src="assets/hg1.png" class="img-polaroid img-responsive" />
                 </p>
                 <p>
                     <img src="assets/gralina2.png" class="img-polaroid img-responsive" />
@@ -37,16 +37,8 @@
                 </p>
             </div>
             <div class="span6">
-                <h3 class="orange">Gralina - 2D ORPG</h3>
+                <h3 class="orange">Hollowgrounds- 2D ORPG</h3>
                 <h4>Powered by the Intersect Game Engine</h4>
-                <p>
-                    Originally planned as an RPG Maker MV sequel to one of my (Nikki's) project I did for class,
-                    Cartuga. The original source files for the game were lost because I forgot to
-                    make a backup before I did a reformat so the project died in 2019. The game was originally supposed
-                    to be another single player quick RPG with the last entry being the online one. But we decided
-                    to make this one online. Inspired by classics such as Deloria Online, Ragnarok Online, and Runescape
-                    (Among many more).
-                </p>
                 <p>
                     Journey alone or with a group of adventurers in this exciting free-to-play retro-style Online
                     Role-Playing Game.
@@ -55,7 +47,19 @@
                     the secrets of the ancient world, which will help you in your quest to stop the evil from rising.
                 </p>
                 <p>
-                    Open Beta coming soon to a computer a near you.
+                    Originally planned as an RPG Maker MV sequel to one of my (Nikki's) project I did for class,
+                    Cartuga, as Gralina but decided to bridge the trilogy together as an online game. The original source files for the game were lost because I forgot to
+                    make a backup before I did a reformat so the project died in 2019. The game was originally supposed
+                    to be another single player quick RPG with the last entry being the online one. But we decided
+                    to make this one online. Inspired by classics such as Deloria Online, Ragnarok Online, and Runescape
+                    (Among many more).
+                </p>
+                <p>
+                    Created in-house by gameJeeNi, Episode 1: Gralina will be the retelling of the RPG Maker MV game that never was come to light. Episode 2 will mark the game's last update before we venture off into a new project 
+                    possibly with the same Engine. While Episode 2 is on the pipeline, don't expect the game's life span to fall short.
+                </p>
+                <p>
+                    Prologue, aka Open Beta, coming to a computer near you
                 </p>
                 <a class="btn btn-primary" href="https://blog.nikkix.me/search/label/Gralina" target=_blank>Check out
                     the DEV Log here</a>
