--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
       </div>
     </div>
     <hr class="soften">
-    <h1>Portfolio</h1>
+    <h1>Portfolio:</h1>
     <div class="row-fluid">
+      <h1>Game Jams</h1>
       <ul class="thumbnails example-sites">
         <li class="span3">
           <a class="thumbnail" href="https://djknitex.itch.io/homeward-bound" target="_blank">
@@ -93,6 +94,17 @@
         </li>
       </ul>
     </div>
+    <div class="row-fluid">
+      <h1>Long-term Projects</h1>
+      <ul class="thumbnails example-sites">
+        <li class="span3">
+          <a class="thumbnail" href="hollowgrounds.html" target="_blank">
+            <img src="assets/hg1.png" alt="WADParser.py">
+          </a>
+          <h4>Hollowgrounds - 2D ORPG</h4>
+        </li>
+    </div>
+
     <hr class="soften">
     <h1>Game Jams we like to enter</h1>
     <div class="row-fluid">
