--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </ul>
     </div>
     <div class="row-fluid">
-      <h1>Long-term Projects</h1>
+      <h1>Current Projects</h1>
       <ul class="thumbnails example-sites">
         <li class="span3">
           <a class="thumbnail" href="hollowgrounds.html" target="_blank">
