fixing title and team

--- a/hollowgrounds.html
+++ b/hollowgrounds.html
@@ -9,7 +9,7 @@
     <link href="bootstrap.css" rel="stylesheet">
     <link href="bootstrap-responsive.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <title>Gralina - 2D ORPG by mockinbird</title>
+    <title>Hollowgrounds- 2D ORPG by mockinbird</title>
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
         </div>
         <hr />
-        <h1>Current Team</h1>
+        <h1>gameJeeNi Team</h1>
         <div class="row-fluid">
             <ul class="thumbnails example-sites">
                 <li class="span3">
