added new info + games

--- a/about.html
+++ b/about.html
@@ -111,6 +111,11 @@
                         <h3>Jenna</h3>
                     </a>
                 </li>
+                <li class="span3">
+                    <a href="https://www.linkedin.com/in/jimmy-yik-6bb8aa207/">
+                        <h3>Jimmy</h3>
+                    </a>
+                </li>
             </ul>
         </div>
         <hr class="soften">
