--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
           </a>
           <h4>Echoes that Sing - NaNoRenO 2022 </h4>
         </li>
+        <li class="span3">
+          <a class="thumbnail" href="https://djknitex.itch.io/pizzageddon-tech-demo" target="_blank">
+            <img src="https://img.itch.zone/aW1nLzEwMjkwODQ1LnBuZw==/315x250%23c/BzPrd9.png" alt="Gather Content">
+          </a>
+          <h4>Pizzageddon - Multiplayer Game Jam by Global Game Jam and Photon 2022 </h4>
+        </li>
+        <li class="span3">
+          <a class="thumbnail" href="https://djknitex.itch.io/a-tale-of-three-scales" target="_blank">
+            <img src="https://img.itch.zone/aW1nLzE0MTgwMDIzLmpwZw==/315x250%23c/UxMNn5.jpg" alt="Gather Content">
+          </a>
+          <h4>A Tale of Three Scales - Game Off 2023</h4>
+        </li>
+        
       </ul>
     </div>
     <div class="row-fluid">
